--- a/office/templates/office/expectation-list.html
+++ b/office/templates/office/expectation-list.html
@@ -45,127 +45,10 @@
                                 </div>
 
                             </div>
-
-                <div class="table-responsive">
-
-                    <table style="margin: 0 auto;" class="table table-max table-bordered align-items-center mb-auto">
-                        <thead class="text-black">
-                        <tr>
-                            <th class="text-dark text-xxs" style="width: 2rem;">
-                                {{ headers.first_header|safe }}
-                            </th>
-                            <th class="text-dark text-xxs " style="width: 2rem;">
-                                {{ headers.second_header|safe }}
-                            </th>
-                            <th class="text-dark text-xxs " style="width: 2rem;">
-                          {{ headers.third_header|safe }}
-                            </th>
-
-                            <th class="text-center text-dark text-xxs" style="width: 2rem;">
-                              {{ headers.fourth_header | safe }}
-                            </th>
-
-                            <th class="text-center text-dark text-xxs" style="width: 2rem;">
-               {{ headers.fifth_header|safe }}
-                            </th>
-                            <th class="text-center text-dark text-xxs" style="width: 2rem;">
-                                                                {{ headers.fifth_header|safe }}
-
-                            </th>
-                            <th class="text-center text-dark text-xxs" style="width: 2rem;">
-                                {{ headers.sixth_header|safe }}
-                            </th>
-                             <th class="text-center text-dark text-xxs" style="width: 2rem;">
-                                                               {{ headers.seventh_header|safe }}
-                            </th>
-
-                            <th class="text-center text-dark text-xxs" style="width: 2rem;">
-                             {{ headers.eight_header|safe }}
-                            </th>
-                            <th class="text-center text-dark text-xxs" style="width: 2rem;">
-
-                            </th>
-                        <th class="text-center text-dark text-xxs" style="width: 2rem;">
-
-                            </th>
-                          <th class="text-center text-dark text-xxs" style="width: 2rem;">
-
-                            </th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {% for item in expectations %}
-                            <tr>
-                                <td>
-
-                                        <p class="mb-0 text-xxs">{{ item.CompanyEntered.name }}</p>
-                                </td>
-                                <td>
-
-                                        <p class=" text-xxs">{{ item.ResearchCompany.name }}</p>
-                                </td>
-                                <td>
-
-{#                                    <p class="mb-0 text-xxs">{{ item.total_earn }}</p>#}
-                                </td>
-                                <td class="align-middle text-center text-xxs">
-{#                                    <p class="mb-0 text-xxs">{{ item.third2020 }}</p>#}
-
-                                </td>
-                                <td class="align-middle text-center">
-{#                                    {% if item.deviationthird2020 < 0 %}#}
-{#                                        <span class="text-danger text-xxs ">{{ item.deviationthird2020|floatformat:-2 }} %</span>#}
-{#                                    {% else %}#}
-{#                                        <span class="text-success text-xxs">{{ item.deviationthird2020|floatformat:-2 }} %</span>#}
-{#                                    {% endif %}#}
-                                </td>
-                              <td class="align-middle text-center text-xxs">
-                                    <p class="mb-0 text-xxs">{{ item.second2020 }}</p>
-
-                                </td>
-                              <td class="align-middle text-center text-xxs">
-{#                                    {% if item.deviationsecond2020 < 0 %}#}
-{#                                        <span class="text-danger text-xxs">{{ item.deviationsecond2020|floatformat:-2 }} %</span>#}
-{#                                    {% else %}#}
-{#                                        <span class="text-success text-xxs">{{ item.deviationsecond2020|floatformat:-2 }} %</span>#}
-{#                                    {% endif %}#}
-                                </td>
- <td class="align-middle text-center text-xxs">
-{#                                    <p class="mb-0 text-xxs">{{ item.realEarn }}</p>#}
-
-                                </td>
-
-                             <td class="align-middle text-center text-xxs">
-                                   <a href="{{ item.report.url }}"><i class="fas fa-file-pdf text-xxs" aria-hidden="true"></i></a>
-                                </td>
-
-      <td class="ms-auto text-start">
-
-                                            <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'expect-delete' item.pk %}"><i class="fas fa-trash text-danger me-2" aria-hidden="true"></i>حذف</a>
-                                        </td>
-   <td class="ms-auto text-start">
-       <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'expect-update' item.pk %}"><i class="fas fa-pencil-alt text-success"></i>تعديل</a>
-
-   </td>
-                              <td class="ms-auto text-start">
-       <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'add-year' item.pk %}"><i class="fas fa-plus text-dark"></i>اضافة ربع</a>
-
-   </td>
-                            </tr>
-                        {% endfor %}
-
-                        </tbody>
-                    </table>
-
-                </div>
-
-
+                            {% include 'partials/_realExpectTable.html' with expects=expectations content=headers %}
+                            {% include 'partials/_pagination.html' with page_obj=expectations only %}
                         {% endif %}
-                    </div>
-                    {% include 'partials/_pagination.html' with page_obj=expectations only %}
-
-                </div>
-            </div>
+                        </div>
         </div>
     </div>
 
