--- a/templates/partials/_realExpectTable.html
+++ b/templates/partials/_realExpectTable.html
@@ -43,22 +43,22 @@
                             <tr>
                                 <td class="d-flex" style="justify-content: space-around; ">
                                     {% if request.user.user_type == 3 %}
-                                     <a  href="{% url 'add_wish' item.year.CompanyEntered.id %}" style="margin-inline:0.2 ;">
+                                     <a  href="{% url 'add_wish' item.CompanyEntered.id %}" style="margin-inline:0.2 ;">
                                        <i class="far fa-bookmark"></i>
 </a>
 
 {% endif %}
-                                    <a href="{% url 'user-company' item.year.CompanyEntered.id %}">
+                                    <a href="{% url 'user-company' item.CompanyEntered.id %}">
 
-                               <p class="text-xxs">{{ item.year.CompanyEntered.name }}</p>
+                               <p class="text-xxs">{{ item.CompanyEntered.name }}</p>
 </a>
 
                        </td>
                                 <td>
 
-                                          <a href="{% url 'user-research' item.year.ResearchCompany.id %}">
+                                          <a href="{% url 'user-research' item.ResearchCompany.id %}">
 
-                                                        <p class="text-xxs  mb-0">{{ item.year.ResearchCompany.name }}</p>
+                                                        <p class="text-xxs  mb-0">{{ item.ResearchCompany.name }}</p>
                                                              </a>
                                 </td>
                                 <td>
@@ -70,38 +70,38 @@
                                     <p class=" text-xxs">{{ item.real_earn }}</p>
                                 </td>
                             <td>
- {% if item.deviation_on_expect == None %}
+ {% if item.deviation_third == None %}
      <p class="text-danger text-xxs ">{{ 0|floatformat:-2 }} %</p>
                                 {% else %}
-         {% if item.deviation_on_expect < 0  %}
-                                        <p class="text-danger text-xxs ">{{ item.deviation_on_expect|floatformat:-2 }} %</p>
+         {% if item.deviation_third < 0  %}
+                                        <p class="text-danger text-xxs ">{{ item.deviation_third|floatformat:-2 }} %</p>
                                     {% else %}
-                                        <p class="text-success text-xxs">{{ item.deviation_on_expect|floatformat:-2 }} %</p>
+                                        <p class="text-success text-xxs">{{ item.deviation_third|floatformat:-2 }} %</p>
                                     {% endif %}
 
                                 {% endif %}
 
                                 </td>
                                 <td class="text-xxs">
-                                    <p class=" text-xxs">{{ item.quarter_now }}</p>
-
-                                </td>
-                                <td>
-                                    {% if item.deviation_real_now < 0 %}
-                                        <p class="text-danger text-xxs ">{{ item.deviation_real_now|floatformat:-2 }} %</p>
-                                    {% else %}
-                                        <p class="text-success text-xxs">{{ item.deviation_real_now|floatformat:-2 }} %</p>
-                                    {% endif %}
-                                </td>
-                              <td class="text-xxs">
                                     <p class=" text-xxs">{{ item.quarter_past }}</p>
 
                                 </td>
                                 <td>
-                                    {% if item.deviation_real_now < 0 %}
-                                        <p class="text-danger text-xxs ">{{ item.deviation_real_past|floatformat:-2 }} %</p>
+                                    {% if item.deviation_fourth < 0 %}
+                                        <p class="text-danger text-xxs ">{{ item.deviation_fourth|floatformat:-2 }} %</p>
                                     {% else %}
-                                        <p class="text-success text-xxs">{{ item.deviation_real_past|floatformat:-2 }} %</p>
+                                        <p class="text-success text-xxs">{{ item.deviation_fourth|floatformat:-2 }} %</p>
+                                    {% endif %}
+                                </td>
+                              <td class="text-xxs">
+                                    <p class=" text-xxs">{{ item.pervquarter }}</p>
+
+                                </td>
+                                <td>
+                                    {% if item.deviation_fourth < 0 %}
+                                        <p class="text-danger text-xxs ">{{ item.deviation_fourth|floatformat:-2 }} %</p>
+                                    {% else %}
+                                        <p class="text-success text-xxs">{{ item.deviation_fourth|floatformat:-2 }} %</p>
                                     {% endif %}
                                 </td>
 
