--- a/userInterface/templates/userInterface/home-page.html
+++ b/userInterface/templates/userInterface/home-page.html
@@ -60,7 +60,12 @@
         <div class="card h-100 pt-3">
 <div class="card-header pb-0 p-3">
     <h6 class="mb-0 text-center">اخر التغيرات فى قوائم <strong>كبار الملاك</strong></h6>
-    <p>بتاريخ :<strong style="margin-inline: 0.2rem;">{{ last_date }}</strong> </p>
+    {% if last_date == None %}
+    <p> <strong style="margin-inline: 0.2rem;">لا يوجد تغيرات</strong> </p>
+      {% else %}
+      <p>بتاريخ :<strong style="margin-inline: 0.2rem;">{{ last_date }}</strong> </p>
+
+    {% endif %}
 </div>
 
 <div class="card-body px-0 pb-2">
